<?xml version="1.0"?>
<package>
  <name>diagnostic_monitor</name>
  <version>0.1.0</version>
  <description>diagnostic_monitor</description>
  <url>http://www.ros.org/wiki/diagnostic_monitor</url>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <author email="igor@cogniteam.com">Igor Makhtes</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>scriptable_monitor</run_depend>
  <run_depend>scriptable_monitor_rqt</run_depend>

  <export>
  	<metapackage/>
  </export>
  
</package>
